update header, update doc structure

--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
         <title>Welcome, Friend</title>
     </head>
     <body>
-        Long time no see
-
-        <pre>
+       <h1>
+           悦音旭程
+       </h1>
+       <div class="passages">
+           <div class="article">
+              <h3 class="title">
+                  合唱记忆(一) · 我有一个恋爱
+              </h3>
+               <pre>
         1，
         纯属巧合，自己与合唱结缘。按照某些必然性的因果推断，就是自己对于艺术逼
         格的追求，总还是有大半勺的分量。缘之所生，恰当的时间，合适的人物，巧合
@@ -68,5 +74,7 @@
         桌子，笔记本电脑咿咿呀呀的放着不知道什么音频。现在回想起来，这就是我与
         合唱的第一次相遇。
         </pre>
+           </div>
+       </div>
     </body>
 </html>
