--- a/index.html
+++ b/index.html
@@ -8,77 +8,7 @@
 </head>
 
 <body>
-    <h1>
-           悦音旭程
-       </h1>
-    <div class="passages">
-        <div class="article">
-            <h3 class="title">
-                  合唱记忆(一) · 我有一个恋爱
-              </h3>
-            <pre>
-1，
-纯属巧合，自己与合唱结缘。按照某些必然性的因果推断，就是自己对于艺术逼格的追求，总还是有大半勺的分量。缘之所生，恰当的时间，合适的人物，巧合的氛围，悸动的心境，缺一不可。蒙去前文合唱二字，描绘恋爱的心境，估计只能写出差不多的东西。作为一篇记述的文字，当下的我希望能够站在临海的高崖上，俯瞰依旧沸腾翻滚的血海，描摹必将消散的记忆。
-2，
-不知道能够在高崖上坚持多久。腥风血雨迎面打来。双目刺痛，视线被红色浸润。震怒之日，悲怆如暴雨倾盆。盐碱的气味无比恶心，胃中烧成灰烬的蛾子开始挣扎。不想再次掉入深渊，那里好似天堂。沸腾着的猩红玛丽，倒入晶莹剔透的水晶杯。 Cok，Cok，Cok… 激烈地咳嗽让我的双肋一阵刺痛。在干嘛？ 手握颜料，我要在纸上涂抹关于合唱的回忆。
-3，
-从哪里画起呢，脑海中只有凌乱的片段。想画的东西太多，记忆都开始渐渐模糊。涂！不管会涂成什么样。凝固一块松香，做成标本，让时间在这里放缓。
-4，
-传统小说的发展模式，应该是有一个主人公，在某个时间地点，依次干了blabla的事情。比如扶桑贵族一生无忧无虑的把妹经历，或者革命英豪的传奇战斗历程。在自己的记忆里，主人公当然是我。如果真的按照时间线推进，几年前的自己实在是愚钝不堪，惭愧到不敢在键盘上敲下来，不管是第一人称还是第三人称。当然办法总是有，模仿抗日神剧，美化自己，丑化敌人。但是这样的臆想实在毫无价值。
-5，
-美化自己是无法避免的，但是拔高自己确实万万不能。将鸡蛋放在高位置，状态岌岌可危。个人曾经比较喜欢看罗胖的视频，觉得挺有意思的。但是后来他越飞越高，都已经虚化了，但是产出的内容，个人觉得并没有实质的提升。自己本来读书不多，日常的工作生活也只是敲敲代码，刷刷知乎。最害怕的事情就是他人对我有期待。期待这玩意，怕了。
-6，
-时间过的很快，我很庆幸我自己能够活到而立之年。二十岁的我生活习惯不好，经常熬夜，但是心中常常有说不尽的点子，做不完的事情。我还记得，在QQ空间中的签名“乘我未满十八岁，畅所欲言”。那个求知若渴，逼格甚高的中二少年，一直坚持着自己兴趣，从相遇到告别，完整地与合唱度过四年时光。十年的时间，物是人非。难得一个休息日，我很想再体味一番曾经的少年。白纸，钢笔，大书桌。对了，还有窗外的蓝天。
-7，
-行文至此，想来各位读者已经发现码者思维非常跳跃。本人也十分很痛恨这般。避免突兀，本人直接将文字分割成数个小段，写着顺畅，读着省心，形式着实不错。贼哈哈哈哈哈。
-8，
-也许更多的上下文或许能够帮助作者之外的人来阅读这一篇文章。如果文章之间是低耦合的，阅读者能够用更低的成本来阅读这一篇文章。但能完全解耦的文章估计只有心灵鸡汤了。从阅读体验方向分析，一篇文章能够引发共鸣，更多的是有相似的经历。我是谁？伪文艺/男中/伪男低/装逼/极客/理工/中二/的程序员。
-9，
-作为一名打码职业户，斟酌这篇文章的时间确实不短。但倾尽全力，也就是普通人的水平。很赞同一种说法，一种技能，对于绝大多数人，都是处于非常低级的水平；业余的高手，能够接近60分及格线；以技能谋生的专业人士来说，60分才刚刚起步，水平分布在70~80分；但是真正在专业高手境界90分以上的人，凤毛麟角。总体来说，自己作为普通人，如果能够接近及格线的话，就能够获得足够的快乐了。可悲啊，自己觉得70分才是归宿，犹如背负诅咒。
-10，
-追溯一切的源头，就是本科入学的头一个月。军训的烈日将新生烧烤至七成熟，更加火热的是在食堂门口拉着横幅，喊着口号的学长学姐们。吉他社将大音响搬到了食堂门口，接上话筒和吉他，迷人的BBQ嗓情歌，吸引着一圈又一圈的观望。飞扬的传单，好像砰砰爆出的彩花。一切属于盛大的狂欢，疯狂地人们，疯狂地学校。遇着女生就呼美女，见到男生就叫帅哥。人群之后，有一张无人问津的小桌子，笔记本电脑咿咿呀呀的放着不知道什么音频。现在回想起来，这就是我与合唱的第一次相遇。
-        </pre>
-        </div>
-    </div>
-    <div class="passages">
-        <div class="article">
-            <h3 class="title">
-                  合唱记忆(二) · 1919
-              </h3>
-            <pre>
-1，
-趁着海马体还没有将记忆重写，将一些脑海中开始弱化的回路强化训练一轮。虽然希望不会丢失肌肉的记忆，但是多月疏于练习，加之工作繁忙，已经没有办法保证训练的时间和质量了。三天不练手生，三月不唱，国歌都唱不准了。
-2，
-进入学院的合唱团，拿到第一份谱子。准确的说，是一张纸。谱子是黑白复印的，打印质量不好，符头与谱线粘结在一起。更糟糕的是，中间还有类似水印一般的章，挤挤攘攘地写着武汉大学人文爱乐合唱团数个小字。令人意外的是，谱名不是保卫黄河之类的红歌，而是一个数字，1919。
-3，
-武汉大学校方敲定的建立时间是1893年， 1919算是很多年之后的一首校歌。记不清是在哪里看到的文章中介绍，这首校歌属于武昌高师的校歌。旋律来自Henry S. Thompsonc 创作的一首美国民谣。康奈尔大学在改编成校歌时将其缩减。高师校歌是在康奈尔大学的版本上重新填词而成。曲目非常短小，歌词共四句，类似一首律诗的结构，读起来朗朗上口。和声简单，两个大三和弦完成了整首曲目，恢弘却不失儒雅。一曲唱完，身心已经跃迁至百年之前，那个风雨飘零的年代。
-4，
-曲目的历史背景重要吗？重要。了解曲目的和声结构重要吗？重要。歌曲的咬字统一重要吗？重要。可是我们唱都唱不准呢。你们这歌太无趣了，我们都睡着了。排练进度太慢了，唱了三四次都是这首无聊的作品。哎呀呀，我的高数作业还没写完呢，他的实验报告还没填呢。
-5，
-恍若灵魂出窍，自己已经站在黑白的罗家山下。邀上三五好友，趁着夜色，矫步窜上狮子山，在校园幻境中畅谈。历史的巧合与遗憾让人扼腕叹息，如果宋教仁先生不英年早逝，如果老校长能够多任五年。
-7，
-忽然想起来，刘道玉老校长诞辰之时，合唱团准备了一场专场音乐会。城设院的学长精心设计的海报，惊艳无比。只可惜老校长因为身体原因未能出席。后来机缘巧合，在假期中成功混入了一场老校长面向中小学生教师的讲座。近距离接触仰慕已久的老先生，内心无比激动。老先生讲的内容现难以复述，但是，老先生的风采依然历历在目。风轻云淡，掷地有声。
-8，
-指挥对于一个合唱团的作用实在是太重要了。不仅仅是指挥技术，同时也要兼顾团队建设、声乐指导、语言指导等多方面职能。 作为一个学生合唱团成员，我对于一个指挥的期望，确实是全能的。虽然从一个团队构成的角度看，这是不合理的。不管怎么说，如果前面站的那个指挥，不能像郭德纲那么幽默，不能像邓丽君那样好声音，像发哥那样霸气，我是没有动力去排练的。（无奈地颜文字）
-9，
-到大学毕业之前，自己总共唱过1919的次数应该超过十次。从接触合唱时接受的培训开始，一遍又一遍，到在高水品团队中打酱油，到用作给新团员的培训材料。同样一份素材，不同阶段的自己，从中读出的内容全然不同。单声部，多声部，和声，发声位置，咬字，咬字位置，排练进度，排练效果，团员心理，演出效果。自己不是一个指挥，不懂指挥技法。我想做的，或者能做的，是在已知的维度来解构指挥这个角色，用外行人的角度。
-10，
-完成了最初的学习，我被学长学姐们分配到了男低声部。并没有什么特色的见面会之后，我了解了学院合唱团每年最重大的活动，金秋艺术节，已经迫在眉睫。曲目选好了，是吴昊老师选的。一定得浓墨重彩地介绍吴昊老师，他是我接触到的第一位专业合唱指挥。同时，我也迫不及待地想解构吴昊老师在我心中的印象。当然，这是下一篇文章的内容了。
-        </pre>
-        </div>
-    </div>
-    <div class="passages">
-        <div class="article">
-            <h3 class="title">
-                  购物体验 · 酷比魔方iwork11
-              </h3>
-            <pre>
-总体来说，上手的感觉还是不错的。基本符合对于这个产品的预期。 非常便宜的平板，1500块不到，买下的平板键盘和笔。自己购买的目的是看电子书。机器的性能确实是一个很大的瓶颈。推荐Xodo阅读器，并使用平板模式来看书，配合手写笔，能够有不错的体验。不过由于是16：9的比例，细长的屏幕总体来说有些别扭。。。希望有4：3的。 自己有一个蓝牙的鼠标，但是在蓝牙模式下鼠标连接断断续续的，最终使用无线连接的方式才能正常使用（接到底座上）。 电量在本人的使用方式下，大概4个小时多一点。 电源是dc5V，2500mA的接口，平常不太方便找到，得独立带着。自己想去弄一根USB转dc的连接线，看看用移动电源能不能够带动这个平板电脑 键盘感觉比较重，不知道是不是刻意这样做的。中间的连接处是裸漏在外的金属接点，不知道是否会氧化。 消息的回复还是挺及时的。
-
-回头放图片
-        </pre>
-        </div>
-    </div>
+    <h1>悦音旭程</h1>
 </body>
 
 </html>
