link pages from index

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 
 <body>
-    <h1>悦音旭程</h1>
+   <h1 class="blog-title"> Carwest's Blog </h1>
+    <div class="passage-navigate">
+        <a href="pages/page1.html">合唱记忆(一) · 我有一个恋爱</a>
+        <a href="pages/page2.html">合唱记忆(二) · 1919</a>
+        <a href="pages/page3.html">购物体验 · 酷比魔方iwork11</a>
+    </div>
 </body>
 
 </html>
